extras/tls-ip-selfsigned/selfsigned-cert-ingress.yaml
######################################################################
# Modify the default Service LoadBalancer to be 'Internal' to ensure
# only traffic via the Ingress is allowed
######################################################################
apiVersion: v1
kind: Service
metadata:
  name: frontend
  annotations:
    networking.gke.io/load-balancer-type: "Internal"
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
######################################################################
# Modify the default Service LoadBalancer to be 'Internal' to ensure
# only traffic via the Ingress is allowed
######################################################################
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: boa-single-cluster-ip
    # reference the FrontendConfig for HTTP -> HTTPS redirect
    networking.gke.io/v1beta1.FrontendConfig: "boa-frontend-config"
spec:
  tls:
  - secretName: frontend-tls
  backend:
    serviceName: frontend
    servicePort: 80
